fixed logo align

--- a/style.css
+++ b/style.css
@@ -5,6 +5,28 @@
     /* border: 1px solid red; */
     font-size: 2rem;
 }
+/* temporary border  */
+.header{
+    border: 2px solid rgb(33, 128, 141);
+}
+.side-bar{
+    border: 2px solid rgb(131, 124, 26);
+}
+.announcement{
+    border: 2px solid rgb(8, 80, 52);
+}
+.trending{
+    border: 2px solid rgb(20, 40, 94);
+}
+/* icon style */
+ .dashboard-logo {
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 0,
+  'GRAD' 0,
+  'opsz' 24
+}
+
 html,body{
     font-size: 62.5%;
 }
@@ -16,6 +38,7 @@ body,.main{
     grid-template-columns: 1fr 4fr;
 }
 .side-bar{
+    list-style: none;
     grid-row: 1 / -3;
 }
 .notify-id-name{
@@ -44,7 +67,7 @@ body,.main{
 .card{
     text-align: center;
     border: 2px solid rebeccapurple;
-    border-radius: 5px;
+    border-radius: 8px;
 }
 .feed-right-side{
     display: grid;
@@ -59,17 +82,20 @@ img{
     width: 70px;
     border-radius: 50px;
 }
+.trend-content ul{
+    list-style: none;
+}
+.trend-content ul li{
+    display: flex;
+}
 
-/* temporary border  */
-.header{
-    border: 2px solid rgb(33, 128, 141);
-}
-.side-bar{
-    border: 2px solid rgb(131, 124, 26);
-}
-.announcement{
-    border: 2px solid rgb(8, 80, 52);
-}
-.trending{
-    border: 2px solid rgb(20, 40, 94);
+span{
+    vertical-align: middle; /* to align logo with text */
+} 
+
+input{
+    height: 35px;
+    width: 300px;
+    border: 2px solid ;
+    border-radius: 15px;
 }
